--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script>
 		fetch("https://tatoeba.elnu.com/?from=jpn&orphans=no&sort=random&to=eng&trans_filter=limit&trans_to=eng&unapproved=no&limit=1&current=1").then(r => r.json())
 			.then(response => {
-				console.log(response.results);
+				console.log(response);
 				let japaneseText = response.results[0].transcriptions[0].html;
 
 				// filter the Japanese Text for full width period, and replace it with a half width period
@@ -30,12 +30,14 @@
 				else {
 					translation.innerHTML = "No translation available";
 				}
+
+
 			})
 	</script>
 
 	<style>
 		body {
-			font-size: clamp(12px, 2.2vw, 50px);
+			font-size: clamp(16px, 2.2vw, 50px);
 			/* background: black; */
 			background: rgb(2, 0, 36);
 			background: radial-gradient(circle, rgb(0, 0, 0) 0%, rgb(2, 2, 68) 100%);
@@ -55,6 +57,8 @@
 	<div style="display:grid;place-items:center;align-content: center; height: 100vh">
 		<h1 id="japanese" style="text-align: center; margin: 0 0 0.2em;"></h1>
 		<span id="translation" style="text-align: center;"></span>
+
+		<button id="speak">Speak Japanese Sentence</button>
 	</div>
 </body>
 
