--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<title>Random Japanese Sentence</title>
+	<title>Random Japanese Sentence - Lite</title>
 
 	<script>
 		fetch("https://tatoeba.elnu.com/?from=jpn&orphans=no&sort=random&to=eng&trans_filter=limit&trans_to=eng&unapproved=no&limit=1&current=1").then(r => r.json())
 			.then(response => {
 				console.log(response);
-				let japaneseText = response.results[0].transcriptions[0].html;
+				let japaneseText = response.results[0].text;
 
 				// filter the Japanese Text for full width period, and replace it with a half width period
-				japaneseText = japaneseText.replace(/。/g, "｡").replace(/？/g, "?").replace(/！/g, "!");
+				japaneseRuby = japaneseRuby.replace(/。/g, "｡").replace(/？/g, "?").replace(/！/g, "!");
 
-				japanese.innerHTML = japaneseText;
+				japanese.innerHTML = japaneseRuby;
 				if (response.results[0].translations[0]) {
 					translation.innerHTML = response.results[0].translations[0][0].text;
 				}
@@ -31,7 +31,12 @@
 					translation.innerHTML = "No translation available";
 				}
 
-
+				speak.addEventListener("click", () => {
+					let utterance = new SpeechSynthesisUtterance(japaneseText);
+					utterance.lang = "ja-JP";
+					utterance.rate = 0.8;
+					speechSynthesis.speak(utterance);
+				})
 			})
 	</script>
 
