--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<title>Random Japanese Sentence - Lite</title>
 
-	<script>
+	<script defer>
 		fetch("https://tatoeba.elnu.com/?from=jpn&orphans=no&sort=random&to=eng&trans_filter=limit&trans_to=eng&unapproved=no&limit=1&current=1").then(r => r.json())
 			.then(response => {
 				console.log(response);
 				let japaneseText = response.results[0].text;
+				let japaneseRuby = response.results[0].transcriptions[0].html;
 
 				// filter the Japanese Text for full width period, and replace it with a half width period
 				japaneseRuby = japaneseRuby.replace(/。/g, "｡").replace(/？/g, "?").replace(/！/g, "!");
@@ -31,39 +32,64 @@
 					translation.innerHTML = "No translation available";
 				}
 
-				speak.addEventListener("click", () => {
-					let utterance = new SpeechSynthesisUtterance(japaneseText);
-					utterance.lang = "ja-JP";
-					utterance.rate = 0.8;
-					speechSynthesis.speak(utterance);
-				})
+				window.speechSynthesis.onvoiceschanged = function () {
+					speakButton.addEventListener("click", () => {
+						let utterance = new SpeechSynthesisUtterance(japaneseText);
+						utterance.lang = "ja-JP";
+						utterance.rate = 0.8;
+						speechSynthesis.speak(utterance);
+					})
+				};
 			})
 	</script>
 
 	<style>
 		body {
-			font-size: clamp(16px, 2.2vw, 50px);
+			font-size: clamp(16px, 1.5vw + 10px, 50px);
 			/* background: black; */
 			background: rgb(2, 0, 36);
 			background: radial-gradient(circle, rgb(0, 0, 0) 0%, rgb(2, 2, 68) 100%);
 			color: white;
 			padding: clamp(16px, 1vw, 20px);
 
-			font-family: 'Baskerville', 'YuMincho +36p Kana', serif;
+			font-family: 'Baskerville', 'YuMincho +36p Kana', 'Hiragino Mincho ProN W6', serif;
 		}
 
 		h1 {
 			font-weight: 900;
+		}
+
+
+		button {
+			border-radius: 8px;
+			border: 1px solid white;
+			padding: 0.6em 1.2em;
+			/* font-size: 1em; */
+			/* font-weight: 500; */
+			font-family: inherit;
+			background-color: #000000;
+			color: white;
+			cursor: pointer;
+			transition: border-color 0.25s;
+		}
+
+		button:hover {
+			border-color: #646cff;
+		}
+
+		button:focus,
+		button:focus-visible {
+			outline: 4px auto -webkit-focus-ring-color;
 		}
 	</style>
 </head>
 
 <body>
 	<div style="display:grid;place-items:center;align-content: center; height: 100vh">
-		<h1 id="japanese" style="text-align: center; margin: 0 0 0.2em;"></h1>
-		<span id="translation" style="text-align: center;"></span>
+		<h1 id="japanese" style="text-align: center; margin: 0 0 0.2em;">Loading Sentence...</h1>
+		<span id="translation" style="text-align: center; margin: 0 0 0.5em;"></span>
 
-		<button id="speak">Speak Japanese Sentence</button>
+		<button id="speakButton">Speak Japanese Sentence</button>
 	</div>
 </body>
 
