--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			background: rgb(2, 0, 36);
 			background: radial-gradient(circle, rgb(0, 0, 0) 0%, rgb(2, 2, 68) 100%);
 			color: white;
-			padding: clamp(16px, 1vw, 20px);
+			padding: clamp(18px, 1vw, 22px);
 
 			font-family: 'Baskerville', 'YuMincho +36p Kana', 'Hiragino Mincho ProN W6', serif;
 		}
@@ -70,7 +70,7 @@
 			border-radius: 8px;
 			border: 1px solid white;
 			padding: 0.6em 1.2em;
-			/* font-size: 1em; */
+			font-size: 1rem;
 			/* font-weight: 500; */
 			font-family: inherit;
 			background-color: #000000;
@@ -91,9 +91,10 @@
 </head>
 
 <body>
-	<div style="display:grid;place-items:center;align-content: center; height: 100vh">
+	<div
+		style="display:grid;place-items:center;align-content: center; min-height: -webkit-fill-available;min-height: 100vh;">
 		<h1 id="japanese" style="text-align: center; margin: 0 0 0.2em;">Loading Sentence...</h1>
-		<span id="translation" style="text-align: center; margin: 0 0 0.5em;"></span>
+		<span id="translation" style="text-align: center; margin: 0 0 0.7em;"></span>
 
 		<button id="speakButton">Speak Japanese Sentence</button>
 	</div>
