--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 
 
 		button {
-			border-radius: 8px;
+			border-radius: 10px;
 			border: 1px solid white;
-			padding: 0.6em 1.2em;
+			padding: 0.5em 1em;
 			font-size: 1rem;
 			/* font-weight: 500; */
 			font-family: inherit;
 			background-color: #000000;
 			color: white;
 			cursor: pointer;
-			transition: border-color 0.25s;
+			/* transition: border-color 0.25s; */
 		}
 
 		button:hover {
