--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<title>Random Japanese Sentence - Lite</title>
 
 	<script defer>
-		let japaneseText;
+		// let japaneseText;
 		fetch("https://tatoeba.elnu.com/?from=jpn&orphans=no&sort=random&to=eng&trans_filter=limit&trans_to=eng&unapproved=no&limit=1&current=1").then(r => r.json())
 			.then(response => {
 				console.log(response);
-				japaneseText = response.results[0].text;
+				let japaneseText = response.results[0].text;
 				let japaneseRuby = response.results[0].transcriptions[0].html;
 
 				// filter the Japanese Text for full width period, and replace it with a half width period
@@ -33,24 +33,31 @@
 					translation.innerHTML = "No translation available";
 				}
 
-
+				speakButton.addEventListener("click", () => {
+					if (japaneseText) {
+						let utterance = new SpeechSynthesisUtterance(japaneseText);
+						utterance.lang = "ja";
+						utterance.rate = 0.8;
+						speechSynthesis.speak(utterance);
+					}
+				})
 			})
 
-		function speakSentence(sentence) {
-			let utterance = new SpeechSynthesisUtterance(sentence);
-			utterance.lang = "ja-JP";
-			utterance.rate = 0.8;
-			speechSynthesis.speak(utterance);
-		}
+		// function speakSentence(sentence) {
+		// 	let utterance = new SpeechSynthesisUtterance(sentence);
+		// 	utterance.lang = "ja-JP";
+		// 	utterance.rate = 0.8;
+		// 	speechSynthesis.speak(utterance);
+		// }
 
-		// Chrome loads voices asynchronously.
-		window.speechSynthesis.onvoiceschanged = function (e) {
-			speakButton.addEventListener("click", () => {
-				if (japaneseText) {
-					speakSentence(japaneseText);
-				}
-			})
-		};
+		// // Chrome loads voices asynchronously.
+		// window.speechSynthesis.onvoiceschanged = function (e) {
+		// 	speakButton.addEventListener("click", () => {
+		// 		if (japaneseText) {
+		// 			speakSentence(japaneseText);
+		// 		}
+		// 	})
+		// };
 
 	</script>
 
@@ -75,7 +82,7 @@
 			border-radius: 10px;
 			border: 1px solid white;
 			padding: 0.5em 1em;
-			font-size: 1rem;
+			font-size: 0.5em;
 			/* font-weight: 500; */
 			font-family: inherit;
 			background-color: #000000;
