--- a/index.html
+++ b/index.html
@@ -11,7 +11,140 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<title>Random Japanese Sentence - Lite</title>
 
-	<script defer>
+
+	<style>
+		body {
+			font-size: clamp(16px, 1.5vw + 10px, 50px);
+			/* background: black; */
+			background: rgb(2, 0, 36);
+			background: radial-gradient(circle, rgb(0, 0, 0) 0%, rgb(2, 2, 68) 100%);
+			color: white;
+			padding: clamp(18px, 1vw, 22px);
+
+			font-family: 'Baskerville', 'YuMincho +36p Kana', 'Hiragino Mincho ProN W6', serif;
+		}
+
+		h1 {
+			font-weight: 900;
+		}
+
+
+		button {
+			border-radius: 10px;
+			border: 1px solid white;
+			padding: 0.5em 1em;
+			font-size: 0.5em;
+			/* font-weight: 500; */
+			font-family: inherit;
+			background-color: #000000;
+			color: white;
+			cursor: pointer;
+			/* transition: border-color 0.25s; */
+		}
+
+		button:hover {
+			border-color: #646cff;
+		}
+
+		button:focus,
+		button:focus-visible {
+			outline: 4px auto -webkit-focus-ring-color;
+		}
+	</style>
+</head>
+
+<body>
+	<div
+		style="display:grid;place-items:center;align-content: center; min-height: -webkit-fill-available;min-height: 100vh;">
+		<h1 id="japanese" style="text-align: center; margin: 0 0 0.2em;">Loading Sentence...</h1>
+		<span id="translation" style="text-align: center; margin: 0 0 0.7em;"></span>
+
+		<button id="speakButton">Speak Japanese Sentence</button>
+		<button id="speakTest">Speak test Sentence</button>
+	</div>
+
+
+	<script>
+		let _speechSynth
+		let _voices
+		const _cache = {}
+
+		/**
+		 * retries until there have been voices loaded. No stopper flag included in this example. 
+		 * Note that this function assumes, that there are voices installed on the host system.
+		 */
+
+		function loadVoicesWhenAvailable(onComplete = () => { }) {
+			_speechSynth = window.speechSynthesis
+			const voices = _speechSynth.getVoices()
+
+			if (voices.length !== 0) {
+				_voices = voices
+				onComplete()
+			} else {
+				return setTimeout(function () { loadVoicesWhenAvailable(onComplete) }, 100)
+			}
+		}
+
+		/**
+		 * Returns the first found voice for a given language code.
+		 */
+
+		function getVoices(locale) {
+			if (!_speechSynth) {
+				throw new Error('Browser does not support speech synthesis')
+			}
+			if (_cache[locale]) return _cache[locale]
+
+			_cache[locale] = _voices.filter(voice => voice.lang === locale)
+			return _cache[locale]
+		}
+
+		/**
+		 * Speak a certain text 
+		 * @param locale the locale this voice requires
+		 * @param text the text to speak
+		 * @param onEnd callback if tts is finished
+		 */
+
+		function playByText(locale, text, onEnd) {
+			const voices = getVoices(locale)
+
+			// TODO load preference here, e.g. male / female etc.
+			// TODO but for now we just use the first occurrence
+			const utterance = new window.SpeechSynthesisUtterance()
+			utterance.voice = voices[0]
+			utterance.pitch = 1
+			utterance.rate = 1
+			utterance.voiceURI = 'native'
+			utterance.volume = 1
+			utterance.rate = 1
+			utterance.pitch = 0.8
+			utterance.text = text
+			utterance.lang = locale
+
+			if (onEnd) {
+				utterance.onend = onEnd
+			}
+
+			_speechSynth.cancel() // cancel current speak, if any is running
+			_speechSynth.speak(utterance)
+		}
+
+		// on document ready
+		loadVoicesWhenAvailable(function () {
+			console.log("loaded")
+		})
+
+		// function speak() {
+		// 	setTimeout(() => , 300)
+
+		// }
+
+		speakTest.addEventListener("click", () => {
+			playByText("ja-JP", "Hello, world");
+		})
+
 		let voice = window.speechSynthesis
 			.getVoices()
 			.filter((v) => v.lang.startsWith("ja"))[0];
@@ -65,56 +198,6 @@
 		// };
 
 	</script>
-
-	<style>
-		body {
-			font-size: clamp(16px, 1.5vw + 10px, 50px);
-			/* background: black; */
-			background: rgb(2, 0, 36);
-			background: radial-gradient(circle, rgb(0, 0, 0) 0%, rgb(2, 2, 68) 100%);
-			color: white;
-			padding: clamp(18px, 1vw, 22px);
-
-			font-family: 'Baskerville', 'YuMincho +36p Kana', 'Hiragino Mincho ProN W6', serif;
-		}
-
-		h1 {
-			font-weight: 900;
-		}
-
-
-		button {
-			border-radius: 10px;
-			border: 1px solid white;
-			padding: 0.5em 1em;
-			font-size: 0.5em;
-			/* font-weight: 500; */
-			font-family: inherit;
-			background-color: #000000;
-			color: white;
-			cursor: pointer;
-			/* transition: border-color 0.25s; */
-		}
-
-		button:hover {
-			border-color: #646cff;
-		}
-
-		button:focus,
-		button:focus-visible {
-			outline: 4px auto -webkit-focus-ring-color;
-		}
-	</style>
-</head>
-
-<body>
-	<div
-		style="display:grid;place-items:center;align-content: center; min-height: -webkit-fill-available;min-height: 100vh;">
-		<h1 id="japanese" style="text-align: center; margin: 0 0 0.2em;">Loading Sentence...</h1>
-		<span id="translation" style="text-align: center; margin: 0 0 0.7em;"></span>
-
-		<button id="speakButton">Speak Japanese Sentence</button>
-	</div>
 </body>
 
 </html>
